// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - java-simple-application:openapi-generator gradle-addOpenapiGeneratorPlugin(false) should call source snapshot 1`] = `
{
  "addJavaDefinitions": [
    {
      "condition": false,
      "mavenDefinition": {
        "pluginManagement": [
          {
            "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <templateDirectory>\${project.basedir}/src/main/openapi-templates</templateDirectory>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <!-- The source OpenAPI document is copied verbatim. OpenAPI Generator's
                                 component-name convention is stricter than OAS and must not cause the
                                 generator to rewrite or reject an otherwise usable contract. -->
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateAliasAsModel>true</generateAliasAsModel>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <documentationProvider>none</documentationProvider>
                                <title>jhipster</title>
                                <useSpringBoot4>true</useSpringBoot4>
                                <useJackson3>true</useJackson3>
                                <openApiNullable>false</openApiNullable>
                                <useBeanValidation>true</useBeanValidation>
                                <performBeanValidation>true</performBeanValidation>
                                <containerDefaultToNull>true</containerDefaultToNull>
                            </configOptions>
                            <typeMappings>
                                <typeMapping>date=LocalDate</typeMapping>
                                <typeMapping>DateTime=Instant</typeMapping>
                                <typeMapping>Time=LocalTime</typeMapping>
                            </typeMappings>
                            <importMappings>
                                <importMapping>Instant=java.time.Instant</importMapping>
                                <importMapping>ZonedDateTime=java.time.ZonedDateTime</importMapping>
                                <importMapping>LocalDate=java.time.LocalDate</importMapping>
                                <importMapping>LocalTime=java.time.LocalTime</importMapping>
                            </importMappings>
                        </configuration>
                    </execution>
                </executions>
",
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
            "version": "\${openapi-generator-maven-plugin.version}",
          },
        ],
        "plugins": [
          {
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
          },
        ],
        "properties": [
          {
            "property": "openapi-generator-maven-plugin.version",
            "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
          },
        ],
      },
    },
  ],
}
`;

exports[`generator - java-simple-application:openapi-generator gradle-addOpenapiGeneratorPlugin(false) should compose with generators 1`] = `
[
  "jhipster:java-simple-application:build-tool",
]
`;

exports[`generator - java-simple-application:openapi-generator gradle-addOpenapiGeneratorPlugin(false) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java-simple-application:openapi-generator gradle-addOpenapiGeneratorPlugin(true) should call source snapshot 1`] = `
{
  "addGradleBuildSrcDependencyCatalogLibraries": [
    [
      {
        "libraryName": "openapi-generator",
        "module": "org.openapitools:openapi-generator-gradle-plugin",
        "scope": "implementation",
        "version": "'GRADLE-OPENAPI-GENERATOR-VERSION'",
      },
    ],
  ],
  "addGradlePlugin": [
    {
      "id": "jhipster.openapi-generator-conventions",
    },
  ],
  "addJavaDefinitions": [
    {
      "condition": true,
      "mavenDefinition": {
        "pluginManagement": [
          {
            "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <templateDirectory>\${project.basedir}/src/main/openapi-templates</templateDirectory>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <!-- The source OpenAPI document is copied verbatim. OpenAPI Generator's
                                 component-name convention is stricter than OAS and must not cause the
                                 generator to rewrite or reject an otherwise usable contract. -->
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateAliasAsModel>true</generateAliasAsModel>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <documentationProvider>none</documentationProvider>
                                <title>jhipster</title>
                                <useSpringBoot4>true</useSpringBoot4>
                                <useJackson3>true</useJackson3>
                                <openApiNullable>false</openApiNullable>
                                <useBeanValidation>true</useBeanValidation>
                                <performBeanValidation>true</performBeanValidation>
                                <containerDefaultToNull>true</containerDefaultToNull>
                            </configOptions>
                            <typeMappings>
                                <typeMapping>date=LocalDate</typeMapping>
                                <typeMapping>DateTime=Instant</typeMapping>
                                <typeMapping>Time=LocalTime</typeMapping>
                            </typeMappings>
                            <importMappings>
                                <importMapping>Instant=java.time.Instant</importMapping>
                                <importMapping>ZonedDateTime=java.time.ZonedDateTime</importMapping>
                                <importMapping>LocalDate=java.time.LocalDate</importMapping>
                                <importMapping>LocalTime=java.time.LocalTime</importMapping>
                            </importMappings>
                        </configuration>
                    </execution>
                </executions>
",
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
            "version": "\${openapi-generator-maven-plugin.version}",
          },
        ],
        "plugins": [
          {
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
          },
        ],
        "properties": [
          {
            "property": "openapi-generator-maven-plugin.version",
            "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
          },
        ],
      },
    },
  ],
}
`;

exports[`generator - java-simple-application:openapi-generator gradle-addOpenapiGeneratorPlugin(true) should compose with generators 1`] = `
[
  "jhipster:java-simple-application:build-tool",
]
`;

exports[`generator - java-simple-application:openapi-generator gradle-addOpenapiGeneratorPlugin(true) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "buildSrc/src/main/groovy/jhipster.openapi-generator-conventions.gradle": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java-simple-application:openapi-generator maven-addOpenapiGeneratorPlugin(false) should call source snapshot 1`] = `
{
  "addJavaDefinitions": [
    {
      "condition": false,
      "mavenDefinition": {
        "pluginManagement": [
          {
            "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <templateDirectory>\${project.basedir}/src/main/openapi-templates</templateDirectory>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <!-- The source OpenAPI document is copied verbatim. OpenAPI Generator's
                                 component-name convention is stricter than OAS and must not cause the
                                 generator to rewrite or reject an otherwise usable contract. -->
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateAliasAsModel>true</generateAliasAsModel>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <documentationProvider>none</documentationProvider>
                                <title>jhipster</title>
                                <useSpringBoot4>true</useSpringBoot4>
                                <useJackson3>true</useJackson3>
                                <openApiNullable>false</openApiNullable>
                                <useBeanValidation>true</useBeanValidation>
                                <performBeanValidation>true</performBeanValidation>
                                <containerDefaultToNull>true</containerDefaultToNull>
                            </configOptions>
                            <typeMappings>
                                <typeMapping>date=LocalDate</typeMapping>
                                <typeMapping>DateTime=Instant</typeMapping>
                                <typeMapping>Time=LocalTime</typeMapping>
                            </typeMappings>
                            <importMappings>
                                <importMapping>Instant=java.time.Instant</importMapping>
                                <importMapping>ZonedDateTime=java.time.ZonedDateTime</importMapping>
                                <importMapping>LocalDate=java.time.LocalDate</importMapping>
                                <importMapping>LocalTime=java.time.LocalTime</importMapping>
                            </importMappings>
                        </configuration>
                    </execution>
                </executions>
",
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
            "version": "\${openapi-generator-maven-plugin.version}",
          },
        ],
        "plugins": [
          {
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
          },
        ],
        "properties": [
          {
            "property": "openapi-generator-maven-plugin.version",
            "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
          },
        ],
      },
    },
  ],
}
`;

exports[`generator - java-simple-application:openapi-generator maven-addOpenapiGeneratorPlugin(false) should compose with generators 1`] = `
[
  "jhipster:java-simple-application:build-tool",
]
`;

exports[`generator - java-simple-application:openapi-generator maven-addOpenapiGeneratorPlugin(false) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java-simple-application:openapi-generator maven-addOpenapiGeneratorPlugin(true) should call source snapshot 1`] = `
{
  "addJavaDefinitions": [
    {
      "condition": true,
      "mavenDefinition": {
        "pluginManagement": [
          {
            "additionalContent": "                <executions>
                    <execution>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <inputSpec>\${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                            <templateDirectory>\${project.basedir}/src/main/openapi-templates</templateDirectory>
                            <generatorName>spring</generatorName>
                            <apiPackage>com.mycompany.myapp.web.api</apiPackage>
                            <modelPackage>com.mycompany.myapp.service.api.dto</modelPackage>
                            <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                            <!-- The source OpenAPI document is copied verbatim. OpenAPI Generator's
                                 component-name convention is stricter than OAS and must not cause the
                                 generator to rewrite or reject an otherwise usable contract. -->
                            <skipValidateSpec>true</skipValidateSpec>
                            <generateAliasAsModel>true</generateAliasAsModel>
                            <configOptions>
                                <delegatePattern>true</delegatePattern>
                                <documentationProvider>none</documentationProvider>
                                <title>jhipster</title>
                                <useSpringBoot4>true</useSpringBoot4>
                                <useJackson3>true</useJackson3>
                                <openApiNullable>false</openApiNullable>
                                <useBeanValidation>true</useBeanValidation>
                                <performBeanValidation>true</performBeanValidation>
                                <containerDefaultToNull>true</containerDefaultToNull>
                            </configOptions>
                            <typeMappings>
                                <typeMapping>date=LocalDate</typeMapping>
                                <typeMapping>DateTime=Instant</typeMapping>
                                <typeMapping>Time=LocalTime</typeMapping>
                            </typeMappings>
                            <importMappings>
                                <importMapping>Instant=java.time.Instant</importMapping>
                                <importMapping>ZonedDateTime=java.time.ZonedDateTime</importMapping>
                                <importMapping>LocalDate=java.time.LocalDate</importMapping>
                                <importMapping>LocalTime=java.time.LocalTime</importMapping>
                            </importMappings>
                        </configuration>
                    </execution>
                </executions>
",
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
            "version": "\${openapi-generator-maven-plugin.version}",
          },
        ],
        "plugins": [
          {
            "artifactId": "openapi-generator-maven-plugin",
            "groupId": "org.openapitools",
          },
        ],
        "properties": [
          {
            "property": "openapi-generator-maven-plugin.version",
            "value": "'OPENAPI-GENERATOR-MAVEN-PLUGIN-VERSION'",
          },
        ],
      },
    },
  ],
}
`;

exports[`generator - java-simple-application:openapi-generator maven-addOpenapiGeneratorPlugin(true) should compose with generators 1`] = `
[
  "jhipster:java-simple-application:build-tool",
]
`;

exports[`generator - java-simple-application:openapi-generator maven-addOpenapiGeneratorPlugin(true) should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/swagger/api.yml": {
    "stateCleared": "modified",
  },
}
`;
